--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -170,3 +170,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot2=PageUp
+CategorySlot3=PageDown
+CategorySlot1=End
+
